# data_preparator

./: .coverage  .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
auxiliary_files/: services_nphies_codes.xlsx  Маппинг_название услуги_к_нфис_коду.xlsx  Маппинг_название_услуги_к_нфис_коду.xlsx  Номенклатура_лекарств.xlsx
data_preparator/: constants.py  data_frame_separators.py  data_preparator.py  exceptions.py  overseer.py  script.py  validators.py
data_preparator/pandas/: column_converters.py  column_manipulations.py  dataframe_cleaners.py  dataframe_manipulations.py
data_preparator/utils/: date.py  excel_file.py  mappings.py  separation.py  strings.py  validation.py
debug/: script_for_preparator_input.py  script_for_test.py
debug/debug_input/: тест-кейс_структура.xlsx
debug/debug_output/: drugs.xlsx  incomplete_data.xlsx  medical_devices.xlsx  services.xlsx
tests/: conftest.py  test_exceptions.py
tests/data_frame_separators/: test_data_frame_separators.py
tests/fixtures/: separation.py  validation.py
tests/fixtures/files_for_fixtures/: df.xlsx  validation_errors.xlsx
tests/utils/: test_date.py  test_excel_file.py  test_separation.py  test_strings.py  test_validation.py
